# C-Programming

./: 1 (1).c  2_sem  4.c  file.txt  file1.txt  lab15.docx  mergesort.py  sort.c
1_sem/: 1.md
1_sem/dopiki/: dop3.c  readme.md
1_sem/lab10/: Makefile  a.out  dopiki.c  readme.md
1_sem/lab3/: 2.c  readme.md
1_sem/lab4/: readme.md
1_sem/lab5/: readme.md
1_sem/lab6/: 1.c  readme.md
1_sem/lab7/: 5.c  readme.md
1_sem/lab8/: 1.c  readme.md
1_sem/lab9/: 1.c  readme.md
2_sem/: 2.dm
2_sem/RGR/: CMakeLists.txt  main.c  test.c  triangle.c  triangle.h
2_sem/lab1/: 2.c  readme.md
2_sem/lab2/: 1.c  readme.md
2_sem/lab4/: 1.c  readme.md
2_sem/lab5/: sort.c
2_sem/lab6/: main.c  program_dynamic  program_static  student.c  student.h
2_sem/lab7/: 1.c  laba7.md
2_sem/lab8/: 8.md  CMakeLists.txt  sort.c  sort.h  test_sort.c
2_sem/laba5/: 1  1.c
dopiki/: dop3.c
lab10/: 3.c  Makefile  dopiki.c  function.h  osnova.c
lab13/: 2.c
lab14/: 1.c
lab20/: laba7.md
lab3/: 3.c  5.c
lab4/: 4.1.c  4.2.c
lab5/: 13.c
lab6/: 1.c  2.c
lab8/: 1.c
lab9/: 15.c
